cmake_minimum_required(VERSION 3.20)
project(cAlgorithm C)

set(CMAKE_C_STANDARD 99)

add_executable(cAlgorithm main.c leetcode_datastruct/containsDuplicate.c leetcode_datastruct/maxSubArray.c leetcode_datastruct/twoSum.cpp leetcode_datastruct/merge.cpp PAT_datastruct/Reverse.cpp leetcode_datastruct/mergeTwoLists.cpp leetcode_datastruct/hasCycle.cpp "PAT_datastruct/operationSetOfSeq .c" "PAT_datastruct/lengthOfLinkedList .c" PAT_datastruct/searchByNumberOfLinkedList.cpp leetcode_datastruct/removeElements.c leetcode_datastruct/deleteDuplicates.c PAT_datastruct/operationSetOfLink.c PAT_datastruct/operationSetOfLinkWithHead.c PAT_datastruct/implementTwoStacks.c PAT_datastruct/heightOfBinaryTree.c PAT_datastruct/binarySearch.c PAT_datastruct/traversalBinaryTree.c PAT_datastruct/preorderPrintLeaves.c PAT_datastruct/operationsSetBinarySearchTree.c scattered/nodeOfBinaryTree.cpp wangDao.cpp wangDao/SpecialLevelTraverse.c wangDao/isCompleteTree.c wangDao/swapChildNode.c wangDao/searchAndDelete.c)
